# sam

./: .gitignore  Cargo.toml  README.md  dip_switch.kicad_sch  flake.nix  index.html  mosfet.kicad_sch  rust-toolchain.toml  rustfmt.toml
android/: .gitignore  Cargo.toml  README.md  build.sh  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
firmwares/engine_board/: Cargo.toml  README.md
firmwares/engine_board/.cargo/: config.toml
firmwares/engine_board/src/: actors.rs  can.rs  common.rs  engine.rs  main.rs  sensors.rs
firmwares/fancyfins/: Cargo.toml
firmwares/fancyfins/.cargo/: config.toml
firmwares/fancyfins/src/: animations.rs  can.rs  fin_tasks.rs  flash.rs  leds.rs  main.rs  strain_gauge.rs  strain_gauge.rs.old
firmwares/fancyfins/src/animations/: colors.rs  helpers.rs  mod.rs
firmwares/flight_computer/: .gdbinit  .gitignore  Cargo.toml  Embed.toml  Makefile.toml  README.md  memory.x  rust-toolchain  rustfmt.toml
firmwares/flight_computer/.cargo/: config  config.toml
firmwares/flight_computer/.github/workflows/: rust.yml
firmwares/flight_computer/src/: bootloader.rs  buzzer.rs  can.rs  drivers.rs  ethernet.rs  flash.rs  gcs.rs  lib.rs  logging.rs  lora.rs  lora.rs.bak  main.rs  params.rs  recovery.rs  runcam.rs  settings.rs  state_estimation.rs  storage.rs  telemetry.rs  usb.rs  util.rs  vehicle.rs  watchdog.rs
firmwares/flight_computer/src/board/: load_outputs.rs  mod.rs
firmwares/flight_computer/src/drivers/: can.rs  flash.rs  lora.rs  mod.rs  sensors.rs
firmwares/flight_computer/src/gcs/: keyswitch.rs  mod.rs
firmwares/flight_computer/src/sensors/: acc2.rs  baro.rs  compass.rs  gps.rs  imu.rs  mod.rs  power.rs
firmwares/flight_computer/src/subsystems/: engine.rs  ereg.rs  mod.rs
firmwares/flight_computer/tests/: telemetry.rs
firmwares/io_module/: Cargo.toml  README.md  memory.x
firmwares/io_module/.cargo/: config  config.toml
firmwares/io_module/src/: boost.rs  can.rs  common.rs  heartbeat.rs  lib.rs  main.rs  regulator.rs  roles.rs
firmwares/io_module/src/roles/: acs.rs  common.rs  payload.rs  recovery.rs
firmwares/power_module/: Cargo.toml
firmwares/power_module/.cargo/: config.toml
firmwares/power_module/src/: main.rs
galadriel/: Cargo.toml  README.md
galadriel/benches/: bench.rs
galadriel/examples/: hello_world.rs
galadriel/src/: drag.rs  environment.rs  lib.rs  motor.rs  parachute.rs  replication.rs  rocket.rs  sensors.rs  thrusters.rs
gui/: Cargo.toml  index.html  sam.desktop
gui/assets/: manifest.json  sw.js
gui/src/: backend.rs  data_source.rs  data_store.rs  flow_components.rs  flow_components_new.rs  frontend.rs  gui.rs  lib.rs  main.rs  map.rs  panels.rs  plot.rs  settings.rs  system_diagram_components.rs  telemetry_ext.rs  top_bar.rs  tracking.rs  utils.rs  wasm.rs  widgets.rs  windows.rs
gui/src/backend/: log_file.rs  noop.rs  serial.rs  simulation.rs  storage.rs  udp.rs
gui/src/backend/storage/: constant.rs  event_series.rs  sample_series.rs  static_metrics.rs  store.rs  storeable_value.rs
gui/src/data_source/: log_file.rs  serial.rs  simulation.rs
gui/src/flow_components/: bottle.rs  burst_disc.rs  constants.rs  flex_tube.rs  flow_component.rs  line.rs  sensor.rs  tank.rs  valve.rs
gui/src/flow_components_new/: constants.rs  core.rs  flow_painter.rs  math.rs  missing.rs  other.rs  painter_instance.rs  primitives.rs  sensors_and_actuators.rs  utils.rs  valves.rs
gui/src/flow_components_new/core/: constants.rs  flow_painter.rs
gui/src/flow_components_new/math/: conversions.rs  ellipse.rs  parallelogram.rs  utils.rs
gui/src/flow_components_new/other/: flex_tube.rs  line1d.rs  missing.rs
gui/src/flow_components_new/primitives/: character.rs  circle.rs
gui/src/flow_components_new/sensors_and_actuators/: motor.rs  pressure_sensor.rs  temperature_sensor.rs
gui/src/flow_components_new/storage/: bottle.rs  storage_state.rs  tank.rs
gui/src/flow_components_new/utils/: circle.rs
gui/src/flow_components_new/valves/: burst_disc.rs  generic_valve.rs  manual_valve.rs  motorized_valve.rs  pressure_relief.rs  pressure_relief_valve.rs  quick_disconnect.rs  tank_valve.rs  valve_state.rs
gui/src/frontend/: constraints.rs  metric_monitor.rs  popup_manager.rs
gui/src/gui/: acs.rs  fc_settings.rs  map.rs  model_3d.rs  plot.rs  theme.rs  top_bar.rs
gui/src/gui/panels/: header.rs  menu_bar.rs  simulation.rs
gui/src/gui/tabs/: configure.rs  plot.rs
gui/src/gui/windows/: archive.rs
gui/src/panels/: header.rs  menu_bar.rs  metric_status_bar.rs  monitor_bar.rs  simulation.rs
gui/src/system_diagram_components/: core.rs  diagrams.rs  math.rs  other.rs  primitives.rs  sensors_and_actuators.rs  storage.rs  valves.rs
gui/src/system_diagram_components/core/: constants.rs  constraints.rs  display_value.rs  flow_painter.rs  fluids.rs
gui/src/system_diagram_components/diagrams/: acs.rs  hyacinth.rs
gui/src/system_diagram_components/math/: conversions.rs  ellipse.rs  parallelogram.rs  transform.rs  triangle.rs  utils.rs
gui/src/system_diagram_components/other/: flex_tube.rs  line1d.rs  missing.rs  thruster.rs
gui/src/system_diagram_components/primitives/: arrow.rs  character.rs  circle.rs
gui/src/system_diagram_components/sensors_and_actuators/: manometer.rs  motor.rs  pressure_sensor.rs  solenoid.rs  (+1 more)
gui/src/tabs/: configure.rs  plot.rs
gui/src/utils/: file.rs  mesh.rs  tooltip.rs
gui/src/widgets/: acs.rs  fc_settings.rs  hybrid.rs  map.rs  plot.rs  system_diagram.rs  time_line.rs  top_bar.rs
shared_types/: Cargo.toml
shared_types/src/: can.rs  common.rs  lib.rs  settings.rs  telemetry.rs
shared_types/src/can/: engine.rs  ereg.rs  mod.rs  structure.rs
state_estimator/: Cargo.toml
state_estimator/benches/: bench.rs
state_estimator/src/: lib.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs  metrics.rs  new_safe_metrics.rs  representation.rs  schema.rs  source.rs  store.rs
telemetry/src/new_safe_metrics/: example.rs  metric_consumption.rs  uom_helpers.rs
(+114 files in other folders)
