[workspace]
resolver = "2"
members = [
    "android",          # Android wrapper for GUI
    "archive",          # Archived flight data
    "gui",              # Main ground control GUI
    "galadriel",        # Basic numerical rocketry simulation, used via GUI or standalone
    "state_estimator",  # State estimation used both in SITL simulations and firmware
    "shared_types",     # Types like telemetry and settings shared between firmware, simulation and GUI
]
default-members = ["gui"] # Allows running GUI by simply running `$ cargo run` in root of workspace

# We specify dependencies we use in multiple places here, so we can make sure
# every crate uses the same version.
[workspace.dependencies]
# Workspace member packages
archive = { path = "archive" }
sam = { path = "gui" }
galadriel = { path = "galadriel" }
shared_types = { path = "shared_types" }
state_estimator = { path = "state_estimator" }
# CLI & logging
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
# Math
mint = "0.5.9"
half = { version = "2.4.1", default-features = false }
nalgebra = { version = "0.32", default-features = false, features = ["macros", "mint", "serde-serialize-no-std"] }
# egui & friends
egui = { version = "0.27", default-features = false }
egui-wgpu = { version = "0.27", features = [ "winit" ] }
egui-winit = { version = "0.27", default-features = false, features = [ "android-native-activity" ] }
eframe = { version = "0.27", default-features = false, features = ["glow", "wayland", "x11"] }
egui_plot = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
# serialization & communication
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.89"
postcard = "1.0"
siphasher = "0.3"
crc = "2"
# misc
chrono = "0.4"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

[profile.release]
lto = "thin"
