[workspace]
resolver = "2"
members = [
    "android",          # Android wrapper for GUI
    "archive",          # Archived flight data
    "cli",              # Main ground control CLI ($ sam)
    "gui",              # Main ground control GUI ($ sam-gui)
    "galadriel",        # Basic numerical rocketry simulation, used via GUI or standalone
    "state_estimator",  # State estimation used both in SITL simulations and firmware
    "shared_types",     # Types like telemetry and settings shared between firmware, simulation and GUI
    "telemetry",
    "firmwares/flight_computer",
    "firmwares/io_module",
    "firmwares/power_module",
    "firmwares/fancyfins",
    "firmwares/engine_board",
]
default-members = ["cli"] # Allows running GUI by simply running `$ cargo run` in root of workspace

# We specify dependencies we use in multiple places here, so we can make sure
# every crate uses the same version.
[workspace.dependencies]
# Workspace member packages
gui = { path = "gui" }
archive = { path = "archive" }
galadriel = { path = "galadriel" }
shared_types = { path = "shared_types" }
state_estimator = { path = "state_estimator" }
telemetry = { path = "telemetry" }
# CLI & logging
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
# Math
mint = "0.5.9"
half = { version = "2.4.1", default-features = false }
nalgebra = { version = "0.32", default-features = false, features = ["macros", "mint", "serde-serialize-no-std"] }
# egui & friends
egui = { version = "0.31", default-features = false }
egui-wgpu = { version = "0.31", features = [ "winit" ] }
egui-winit = { version = "0.31", default-features = false }
eframe = { version = "0.31", default-features = false, features = ["glow", "wayland", "x11"] }
egui_plot = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
# serialization & communication
bitvec = { version = "1.0.1", default-features = false, features = ["atomic"] }
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.89"
postcard = "1.0"
siphasher = { version = "0.3", default-features = false }
crc = "3"
# misc
chrono = "0.4"
rand = { version = "0.8", default-features = false }

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.release]
debug = true
