[package]
name = "galadriel"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_types = { workspace = true }
telemetry = { workspace = true }

nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = "0.4.3"

egui = { workspace = true, optional = true }
eframe = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }

[features]
egui = ["dep:egui", "dep:eframe", "dep:egui_plot"]
default = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
