[package]
name = "sam"
description = "Sam Ground Station"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace members
galadriel = { workspace = true, features = ["egui"] }
shared_types = { workspace = true }
state_estimator = { workspace = true }
# CLI & logging
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
colored = "2"
# egui & friends
egui = { workspace = true }
eframe = { workspace = true }
egui_plot = { workspace = true }
egui_extras = { workspace = true }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
egui_tiles = "0.7.2"
egui-gizmo = "0.16"
walkers = "0.20"
# serialization & communication
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
serialport = "4"
crc = "2"
# misc
nalgebra = { workspace = true }
chrono = { workspace = true }
directories = "4.0"
colorgrad = "0.6"
tokio = "1.33"
futures = { version = "0.3.28", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }

# Used for profiling
puffin = { version = "0.19", optional = true }
puffin_egui = { version = "0.26", optional = true }

# X86 dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
rfd = "0.10"
home = "0.5" # No home directories in web assembly
indicatif = "0.17"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# Android dependencies
[target.'cfg(target_os = "android")'.dependencies]
home = "0.5" # No home directories in web assembly
indicatif = "0.17"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

# Web Assembly dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
web-time = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"

[features]
profiling = ["dep:puffin", "dep:puffin_egui"]

# The following entries are only required for web assembly compilation
[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
