[package]
name = "gui"
description = "Sam Ground Station"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace members
archive = { workspace = true }
shared_types = { workspace = true }
state_estimator = { workspace = true }
telemetry = { workspace = true, features = ["serde"] }
# CLI & logging
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
# egui & friends
egui = { workspace = true }
eframe = { workspace = true, default-features = true }
egui_plot = { workspace = true }
egui_extras = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
egui_tiles = "0.12"
transform-gizmo-egui = "0.5.0"
walkers = "0.35"
# serialization & communication
heapless = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
crc = { workspace = true }
serialport = "4"
# misc
mint = { workspace = true }
nalgebra.workspace = true
chrono = { workspace = true }
directories = "4.0"
colorgrad = "0.6"
futures = { version = "0.3.28", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
itertools = "0.14"
enum-map = "2.7.3"
earcutr = "0.4.3"
cmake = "0.1.54"

# Used for profiling
#puffin = { version = "0.19", optional = true }
#puffin_egui = { version = "0.29", optional = true }
puffin = { git = "https://github.com/tedsteen/puffin", branch="upgrade-egui", optional = true }
puffin_egui = { git = "https://github.com/tedsteen/puffin", branch="upgrade-egui", optional = true }
bitflags = "2.9.1"

# X86 dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
galadriel = { workspace = true, features = ["egui"] }
rand = { workspace = true, features = ["std", "std_rng"] }
rfd = "0.10"
home = "0.5" # No home directories in web assembly
indicatif = "0.17"

# Android dependencies
[target.'cfg(target_os = "android")'.dependencies]
rand = { workspace = true }
home = "0.5" # No home directories in web assembly
indicatif = "0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = "1.33"
tokio-serial = "5.4.1"
# clippers = "0.1.2"
open = "5.3.2"

# Web Assembly dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { workspace = true, default-features = false, features = ["wgpu"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
web-time = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"

[features]
profiling = ["dep:puffin", "dep:puffin_egui"]

# The following entries are only required for web assembly compilation
[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = "wasm"
path = "src/wasm.rs"
