[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
siphasher = { workspace = true }
