[package]
name = "state_estimator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.15", default-features = false }
shared_types = { workspace = true }
telemetry = { workspace = true }
nalgebra = { workspace = true }
ahrs = { git = "https://github.com/tudsat-rocket/ahrs-rs", branch="sensor-gains", default-features = false, features = ["field_access"] }
filter = { git = "https://github.com/tudsat-rocket/filter-rs" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
