[package]
name = "frodo_fancyfins_firmware"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
#panic-probe = "0.3" # print-defmt is really useful for debugging, but dramatically increases binary size
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-can = "0.4.1"

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
alloc-cortex-m = "0.4"

embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.2", features = ["stm32f103rc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.7", features = [ "arch-cortex-m", "executor-thread", "executor-interrupt" ] } #"integrated-timers", "task-arena-size-16384", }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", features = ["tick-hz-32_768"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.7" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.3" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.1" }

heapless = { version = "0.8.0"}
static_cell = "2"
crc = "3"

shared_types = { path = "../../shared_types" }
w25q = "0.2.9"
smart-leds = "0.4.0"
ws2812-spi = "0.5.0"
