[package]
name = "flight_computer_firmware"
version = "0.1.0"
authors = [
    # Feel free to add yourself here
    "Felix Wiegand <felix-wiegand@protonmail.ch>"
]
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3" # print-defmt is really useful for debugging, but dramatically increases binary size
#panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
alloc-cortex-m = "0.4"

embassy-stm32 = { version = "0.1", features = ["stm32f401rc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["tick-hz-1_000_000"] }
embassy-embedded-hal = "0.1"
embassy-sync = "0.5"
embassy-usb = "0.2"
embassy-futures = "0.1"

static_cell = "2"
num-traits = { version = "0.2.15", default-features = false }
heapless = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
crc = { workspace = true }
nalgebra = { workspace = true }
siphasher = { workspace = true }
rand = { workspace = true }
rand_chacha = { version = "0.3", default-features = false }

shared_types = { workspace = true }
state_estimator = { workspace = true }
telemetry = { workspace = true }

[dev-dependencies]
defmt-test = "0.3"

[features]
gcs = []
rev1 = []

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
