[package]
name = "flight_computer_firmware"
version = "0.1.0"
authors = [
    # Feel free to add yourself here
    "Felix Wiegand <felix-wiegand@protonmail.ch>"
]
edition = "2021"
default-run = "rocket"

[[bin]]
name = "rocket"
path = "src/bin/rocket.rs"

[[bin]]
name = "gcs"
path = "src/bin/gcs.rs"

[[bin]]
name = "selftest"
path = "src/bin/selftest.rs"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
#panic-probe = "0.3" # print-defmt is really useful for debugging, but dramatically increases binary size
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

embassy-stm32 = { version = "0.2", features = ["stm32h743vi", "unstable-pac", "memory-x", "time-driver-tim15", "exti"]  }
embassy-executor = { version = "0.7", features = ["defmt", "task-arena-size-131072", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.4", features = ["tick-hz-1_000_000"] }
embassy-embedded-hal = "0.3"
embassy-sync = "0.6"
embassy-usb = "0.4"
embassy-futures = "0.1"
embedded-can = "0.4.1"
embassy-net = { version = "0.7", features = ["defmt", "udp", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv4", "dns"] }
embedded-nal-async = "0.8.0"
embedded-io-async = "0.6.1"
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", features = ["defmt-03"] }
#lorawan-device = { git = "https://github.com/lora-rs/lora-rs.git", default-features = false, features = ["embassy-time", "defmt-03", "region-eu868"] }

static_cell = "2"
num-traits = { version = "0.2.15", default-features = false }
heapless = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
crc = { workspace = true }
nalgebra = { workspace = true }
siphasher = { workspace = true }
rand = { workspace = true }
rand_chacha = { version = "0.3", default-features = false }

shared_types = { workspace = true }
state_estimator = { workspace = true }
telemetry = { workspace = true }

[dev-dependencies]
defmt-test = "0.3"

[features]
gcs = []
rev1 = []
