[package]
name = "frodo_io_module_firmware"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
#panic-probe = "0.3" # print-defmt is really useful for debugging, but dramatically increases binary size
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
alloc-cortex-m = "0.4"

embassy-stm32 = { version = "0.1", features = ["stm32f103rc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-executor = { version = "0.5", features = ["task-arena-size-2048", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["tick-hz-32_768"] }
embassy-embedded-hal = "0.1"
embassy-sync = "0.5"
embassy-futures = "0.1"

static_cell = "2"
crc = "3"

shared_types = { path = "../../shared_types" }

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.release]
debug = true
