[package]
name = "io_module_firmware"
version = "0.1.0"
edition = "2024"
default-run = "recovery"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "recovery"
path = "src/bin/recovery.rs"

[[bin]]
name = "payvionics"
path = "src/bin/payvionics.rs"

[[bin]]
name = "regulator"
path = "src/bin/regulator.rs"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
#panic-probe = "0.3" # print-defmt is really useful for debugging, but dramatically increases binary size
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"

cortex-m = { version = "0.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7"
alloc-cortex-m = "0.4"

embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.2", features = [
    "stm32f105rc",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.7", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.4", features = [
    "tick-hz-32_768",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.3.1" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.7" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "a5984a8298491ea748693783275d95286a481394", version = "0.1" }

static_cell = "2"
crc = "3"

shared_types = { path = "../../shared_types" }
