[package]
name = "power_module_firmware"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3"

embassy-stm32 = { version = "0.1.0", features = ["stm32f042f6", "memory-x", "time-driver-any", "exti", "unstable-pac"] }
embassy-executor = { version = "0.5", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["tick-hz-1_000"] }

shared_types = { path = "../../shared_types" }
